tests/snapshots/highlight_test__highlight_range.snap
---
source: tests/highlight_test.rs
expression: "draw(40, 2, highlight).buffer()"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 2 },
    content: [
        " 1 │ select a,b,c from table;           ",
        " 2 │ select b,c,d from table2;          ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Rgb(180, 142, 173), bg: Yellow, underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Rgb(192, 197, 206), bg: Yellow, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Rgb(180, 142, 173), bg: Yellow, underline: Reset, modifier: NONE,
        x: 22, y: 0, fg: Rgb(192, 197, 206), bg: Yellow, underline: Reset, modifier: NONE,
        x: 29, y: 0, fg: Reset, bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Rgb(180, 142, 173), bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Rgb(192, 197, 206), bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Rgb(180, 142, 173), bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Rgb(192, 197, 206), bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
        x: 30, y: 1, fg: Reset, bg: Rgb(43, 48, 59), underline: Reset, modifier: NONE,
    ]
}
